--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cancion/EliminarCancion.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cancion/EliminarCancion.form
@@ -67,6 +67,9 @@
       <SubComponents>
         <Container class="javax.swing.JPanel" name="jpanelB">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="cc" type="rgb"/>
+            </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="BUSCAR COMPOSITOR"/>
@@ -263,6 +266,9 @@
             </Component>
             <Container class="javax.swing.JPanel" name="jpanelC">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="cc" type="rgb"/>
+                </Property>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                     <TitledBorder title="BUSCAR CANCION"/>
